--- a/src/style/main.css
+++ b/src/style/main.css
@@ -35,4 +35,13 @@
   line-height: 16px;
   color: #666666;
 }
+
+.phoneNumber p {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 26px;
+  color: #1A1A1A;
+}
 /*# sourceMappingURL=main.css.map */
