--- a/src/style/main.css
+++ b/src/style/main.css
@@ -10,10 +10,13 @@
 .headerWrapper {
   max-width: 1170px;
   margin: 0 auto;
+}
+
+.firstHeader {
   display: -ms-grid;
   display: grid;
       grid-template-areas: "logo location phoneNumber" "logo Nav callBack";
-  margin-top: 25px;
+  padding-top: 25px;
 }
 
 .logo {
@@ -130,5 +133,11 @@ nav ul li:first-child {
   line-height: 16px;
   color: #003CB2;
   letter-spacing: 0.02em;
+}
+
+header {
+  background: url(/src/img/firstScreen.png) no-repeat center;
+  width: 100%;
+  height: 830px;
 }
 /*# sourceMappingURL=main.css.map */
