--- a/src/style/main.css
+++ b/src/style/main.css
@@ -5,6 +5,7 @@
           box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+  outline: none;
 }
 
 .headerWrapper {
@@ -139,5 +140,138 @@ header {
   background: url(/src/img/firstScreen.png) no-repeat center;
   width: 100%;
   height: 830px;
+}
+
+.secondHeader {
+  margin-top: 159px;
+}
+
+.secondHeader .secondHeader-title-block .title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 48px;
+  line-height: 56px;
+  color: #1A1A1A;
+}
+
+.secondHeader .secondHeader-title-block .text {
+  margin-top: 25px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  color: #1A1A1A;
+}
+
+.secondHeader .secondHeader-title-block .showButton {
+  margin-top: 30px;
+  background: #003CB3;
+  -webkit-box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.1);
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  padding: 14px 28px 14px 28px;
+}
+
+.showModal {
+  width: 370px;
+  height: 454px;
+  border: 1px solid rgba(131, 126, 126, 0);
+  background-color: #ffffff;
+  opacity: 1;
+  display: none;
+  position: relative;
+  top: -368px;
+  left: 435px;
+}
+
+.showModal .text-content {
+  position: relative;
+  margin-top: 38px;
+  margin-left: 50px;
+}
+
+.showModal .text-content .modal--title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 37px;
+  color: #1A1A1A;
+}
+
+.showModal .text-content .modal--text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 21px;
+  color: #1A1A1A;
+  margin-top: 14px;
+  padding-bottom: 15px;
+}
+
+.showModal .text-content img {
+  position: absolute;
+  left: 215px;
+  top: -4px;
+}
+
+.showModal .text-content .close {
+  width: 20px;
+  height: 20px;
+  position: absolute;
+  top: -100px;
+  left: 345px;
+  font-size: 50px;
+}
+
+.showModal .text-content .modal--input {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: auto auto auto;
+      grid-template-rows: auto auto auto;
+}
+
+.showModal .text-content .modal--input input {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #B3B3B3;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  width: 200px;
+  height: 40px;
+  padding-left: 15px;
+  margin-top: 15px;
+}
+
+.showModal .text-content .modal--input input:focus {
+  color: #1A1A1A;
+  border: 1px solid #003CB2;
+}
+
+.showModal .text-content .modal--button {
+  background-color: #003CB2;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+  letter-spacing: 0.02em;
+  text-transform: uppercase;
+  padding: 14px 29px 14px 29px;
+  margin-top: 15px;
 }
 /*# sourceMappingURL=main.css.map */
