--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -131,8 +131,8 @@ header {
     opacity: 1;
     display: none;
     position: relative;
-    top: -368px;
-    left: 400px;
+    top: -51vh;
+    left: 50vh;
     .text-content {
         position: relative;
         margin-top: 38px;
